[package]
name = "cargo-nnd"
version = "0.1.0"
edition = "2024"
description = "Cargo subcommand for easily starting nnd"
license = "MIT"
repository = "https://github.com/jprochazk/cargo-nnd"

[dependencies]
argh = "0.1.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
